# pwir

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/kernel/: db.sqlite3
src/kernel/kernel/: settings.py  urls.py
