[tool.poetry]
name = "1"
version = "0.1.0"
description = ""
authors = ["ZuzannaZimmer <225158@student.uek.krakow.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
